# GameDesign

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README-zh.md  README.md
assets/maps/: forest.tmx
docs/: class-design-analysis.md  design-doc.md  wsl-setup-guide.md
scripts/: pre-commit
src/: Game.cpp  Game.hpp  GameScene.cpp  GameScene.hpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  main.cpp
src/audio/: SoundPlayer.cpp  SoundPlayer.hpp
src/core/: Game.cpp  Game.hpp  Pool.hpp  Random.cpp  Random.hpp  ResourceManager.hpp  Scene.cpp  Scene.hpp
src/data/: Collision.hpp  Constants.hpp  EntityTypes.hpp  PlayerState.hpp
src/gameplay/: CharacterDefs.cpp  CharacterDefs.hpp  EnemyDefs.cpp  EnemyDefs.hpp  MapDefs.cpp  MapDefs.hpp  UpgradeDefs.cpp  UpgradeDefs.hpp  WeaponDefs.cpp  WeaponDefs.hpp  WeaponFactory.hpp
src/graphics/: SpriteSheet.hpp  TilemapRenderer.cpp  TilemapRenderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
src/math/: Collision.hpp
src/scenes/: GameOverScene.cpp  GameOverScene.hpp  PauseMenu.cpp  PauseMenu.hpp  PlayScene.cpp  PlayScene.hpp  TitleScene.cpp  TitleScene.hpp  UpgradeUI.cpp  UpgradeUI.hpp
src/systems/: CollisionSystem.cpp  CollisionSystem.hpp  HUD.cpp  HUD.hpp  IWeaponBehavior.hpp  SoundPlayer.cpp  SoundPlayer.hpp  SpawningSystem.cpp  SpawningSystem.hpp  UpgradeDefs.cpp  UpgradeDefs.hpp  WeaponBehaviors.cpp  WeaponBehaviors.hpp  WeaponDefs.cpp  WeaponDefs.hpp  WeaponFactory.hpp  WeaponSystem.cpp  WeaponSystem.hpp  WorldRenderer.cpp
src/ui/: HUD.cpp  HUD.hpp  PauseMenu.cpp  PauseMenu.hpp  UpgradeUI.cpp  UpgradeUI.hpp
